--- a/6-guia/teoria-6/teoria-6.tex
+++ b/6-guia/teoria-6/teoria-6.tex
@@ -1,6 +1,9 @@
 \textit{\underline{Raíces de un número complejo: }}
 
+
 \begin{itemize}[label= \tiny \faIcon{meh}]
+                
+        \item hypertarget{teoria-6:tablita}{Tablita de ángulos agradables}:
   \item Sean $z, w \en \complejos -\set{0}$, $z = r_z e^{\theta_z i}$ y $w = r_w e^{\theta_w i }$ con $r_z,\, s_w \en \reales_{>0}$
         y $\theta_z,\, \theta_w \en \reales$.\par
         Entonces $z = w
