--- a/2-guia/ejercicios-2/ej-18-2.tex
+++ b/2-guia/ejercicios-2/ej-18-2.tex
@@ -2,16 +2,16 @@
   Hallar una fórmula para el término general de las sucesiones definidas recursivamente a continuación
   y probar su validez.
   \begin{enumerate}[label=\roman*)]
-    \item $a_1 = 1,\ a_2 = 2  \ytext a_{n+2} = n a_{n+1} + 2(n+1)a_n,\ \paratodo n \en \naturales $
-    \item $a_1 = 1,\ a_2 = 4  \ytext a_{n+2} = 4 \sqrt{a_{n+1}} + a_n,\ \paratodo n \en \naturales $
-    \item $a_1 = 1,\ a_2 = 3  \ytext 2 a_{n+2} = a_{n+1} + a_n + 3n + 5,\ \paratodo n \en \naturales $
-    \item $a_1 = -3,\ a_2 = 6 \text{ y }
+    \item $a_1 = 1,\, a_2 = 2  \ytext a_{n+2} = n a_{n+1} + 2(n+1)a_n,\, \paratodo n \en \naturales $
+    \item $a_1 = 1,\, a_2 = 4  \ytext a_{n+2} = 4 \sqrt{a_{n+1}} + a_n,\, \paratodo n \en \naturales $
+    \item $a_1 = 1,\, a_2 = 3  \ytext 2 a_{n+2} = a_{n+1} + a_n + 3n + 5,\, \paratodo n \en \naturales $
+    \item $a_1 = -3,\, a_2 = 6  \ytext 
             a_{n+2} =
             \begin{cases}
               -a_{n+1} - 3,        & \text{si $n$ es impar} \\
               a_{n+1} + 2 a_n + 9, & \text{si $n$ es par}
             \end{cases}
-            \  (n \en \naturales )$
+            \,  (n \en \naturales )$
   \end{enumerate}
 \end{enunciado}
 
@@ -22,7 +22,7 @@
         \begin{align}
           a_1     & = 1                                                  \\
           a_2     & = 2                                                  \\
-          a_{n+2} & = n a_{n+1} + 2(n+1)a_n,\ \paratodo n \en \naturales
+          a_{n+2} & = n a_{n+1} + 2(n+1)a_n,\, \paratodo n \en \naturales
         \end{align}
         Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una fórmula para su término
         n-ésimo
@@ -38,7 +38,7 @@
         Hagámoslo por inducción
 
         \begin{align*}
-          P(n): a_n = n!, \ n \en \naturales
+          P(n): a_n = n!, \, n \en \naturales
         \end{align*}
 
         \underline{Caso Base}, $n = 1$ y $n = 2$:
@@ -64,7 +64,7 @@
         \begin{align}
           a_1     & = 1                                                   \\
           a_2     & = 4                                                   \\
-          a_{n+2} & = 4 \sqrt{a_{n+1}} + a_n,\ \paratodo n \en \naturales
+          a_{n+2} & = 4 \sqrt{a_{n+1}} + a_n,\, \paratodo n \en \naturales
         \end{align}
 
         Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una fórmula para su término
@@ -79,7 +79,7 @@
         Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(4).
         Hagámoslo por inducción
         \begin{align*}
-          P(n): a_n = n^2, \ n \en \naturales
+          P(n): a_n = n^2, \, n \en \naturales
         \end{align*}
         \underline{Caso Base}, $n = 1$ y $n = 2$:
         \begin{align*}
@@ -108,8 +108,8 @@
         \begin{align}
           a_1      & = 1                                                              \\
           a_2      & = 3                                                              \\
-          2a_{n+2} & = a_{n+1} + a_n + 3n + 5,\ \paratodo n \en \naturales  \entonces
-          a_{n+2} = \frac{a_{n+1} + a_n + 3n + 5}{2},\ \paratodo n \en \naturales
+          2a_{n+2} & = a_{n+1} + a_n + 3n + 5,\, \paratodo n \en \naturales  \entonces
+          a_{n+2} = \frac{a_{n+1} + a_n + 3n + 5}{2},\, \paratodo n \en \naturales
         \end{align}
 
         Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una fórmula para su término
@@ -127,7 +127,7 @@
         Hagámoslo por inducción:
 
         \begin{align*}
-          P(n): a_n = \frac{n(n+1)}{2}, \ n \en \naturales
+          P(n): a_n = \frac{n(n+1)}{2}, \, n \en \naturales
         \end{align*}
 
         \underline{Caso Base}, $n = 1$ y $n = 2$:
@@ -207,7 +207,7 @@
         conjeturamos en la Ec.(5).
         Hagámoslo por inducción
         \begin{align*}
-          P(n): a_n = (-1)^n 3n, \ n \en \naturales
+          P(n): a_n = (-1)^n 3n, \, n \en \naturales
         \end{align*}
         \underline{Caso Base}, $n = 1$ y $n = 2$:
         \begin{align*}
@@ -227,14 +227,14 @@
           \taa{Aux}{1}{=} (-1)^{n+2}3(n+1) - 3
           \taa{Aux}{2}{=} -3(n+1) - 3                                                                          \\
                 a_{n+2}               & = -3n - 3 - 3 = -3n -6 = -3(n+2) = (-1)3(n+2) \taa{Aux}{2}{=} (-1)^{n+2}3(n+2) \\
-          a_{n+2}               & = (-1)^{n+2}3(n+2) \entonces P(n+2):V,\ n \text{ impar}
+          a_{n+2}               & = (-1)^{n+2}3(n+2) \entonces P(n+2):V,\, n \text{ impar}
         \end{align*}
         Caso $n$ par:
         \begin{align*}
           a_{n+2} \overset{(4)} & {=} a_{n+1} + 2 a_n + 9 \igual{HI} (-1)^{n+1}3(n+1) + 2(-1)^n 3n + 9
           \taa{Aux}{4}{=} -3(n+1) + 2 \cdot 3n + 9                                                                    \\
           a_{n+2}               & = -3n - 3 + 6n + 9 = 3n + 6 = 3(n+2) = 1 \cdot 3(n+2)\igual{Aux.5} (-1)^{n+2}3(n+2) \\
-          a_{n+2}               & = (-1)^{n+2}3(n+2) \entonces P(n+2):V,\ n \text{ par}
+          a_{n+2}               & = (-1)^{n+2}3(n+2) \entonces P(n+2):V,\, n \text{ par}
         \end{align*}
         Por lo tanto, $P(n+2):V$ para cualquier $n$ natural.
         Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\paratodo n \en \naturales $.
@@ -286,18 +286,21 @@
           \end{align*}
         }
         
-  \item Sea $(a_n)_{n \in \mathbb{N}_0}$ definida por
+  \item 
+          Sea $(a_n)_{n \en \naturales _0}$ definida por
     \setcounter{equation}{0}
     \begin{align}
         a_0 &= 1 \\
         a_1 &= 4 \\
-        a_{n+2} &= 4 a_{n+1} - 4 a_n,\ \forall n \in \mathbb{N}_0 
+        a_{n+2} &= 4 a_{n+1} - 4 a_n,\, \paratodo n \en \naturales _0 
     \end{align}
-    Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una formula para su termino 
+
+    Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una fórmula para su término 
     n-ésimo
+
     \begin{align}
         a_2 &= 4a_1 - 4a_0 = 4 \cdot 4 - 4 \cdot 1 = 2^2 \cdot 2^2 - 2^2 = 2^2(2^2 - 1) = 2^2 \cdot 3 \nonumber \\
-        a_3 &= 4a_2 - 4a_1 \overset{\text{Aux}}{=} 4\cdot 2^2 \cdot 3 - 4 \cdot 2 \cdot 2 =
+        a_3 &= 4a_2 - 4a_1 \igual{Aux} 4\cdot 2^2 \cdot 3 - 4 \cdot 2 \cdot 2 =
         2^2\cdot 2^2 \cdot 3 - 2^2 \cdot 2 \cdot 2 = 2^3 (2 \cdot 3 - 2) = 2^3 \cdot 4 \nonumber \\
         a_4 &= 4a_3 - 4a_2 = 4 \cdot 2^3 \cdot 4 - 4 \cdot 2^2 \cdot 3 = 2^2 \cdot 2^3 \cdot 4 - 2^2 \cdot 2^2 \cdot 3 
         = 2^4 (2 \cdot 4 - 3) = 2^4 \cdot 5  \nonumber \\
@@ -307,28 +310,28 @@
         a_n &= 2^n (n+1)
     \end{align}
     Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(4). 
-    Hagamoslo por inducción
+    Hagámoslo por inducción
     \begin{align*}
-        P(n): a_n = 2^n (n+1), \ n \in \mathbb{N}_0   
+        P(n): a_n = 2^n (n+1), \, n \en \naturales _0   
     \end{align*}
     \underline{Caso Base}, $n = 0$ y $n = 1$:
   \begin{align*}
-    &P(0): a_0 = 2^0 (0+1) = 1 \overset{(1)}{=} 1 \implies P(0):V \\
-        &P(1): a_1 = 2^1 (1+1) = 4 \overset{(2)}{=} 4 \implies P(1):V \\
+    &P(0): a_0 = 2^0 (0+1) = 1 \igual{(1)} 1 \entonces P(0):V \\
+        &P(1): a_1 = 2^1 (1+1) = 4 \igual{(2)} 4 \entonces P(1):V \\
   \end{align*}
-  \underline{Paso inductivo}. Sea $n \in \mathbb{N}$:
+  \underline{Paso inductivo}. Sea $n \en \naturales $:
   \begin{enumerate}
-        \item[HI.] $P(n):V \text{ y } P(n+1):V$, donde $P(n+1): a_{n+1} = 2^{n+1}(n+2)$
+        \item[HI.] $P(n):V  \ytext P(n+1):V$, donde $P(n+1): a_{n+1} = 2^{n+1}(n+2)$
         \item[TI.] $P(n+2): a_{n+2} = 2^{n+2}(n+3)$
     \end{enumerate}
   Desarrollemos el lado izquierdo de la igualdad en la TI
     \begin{align*}
-        a_{n+2} \overset{(3)}&{=} 4 a_{n+1} - 4 a_n \overset{\text{HI}}{=} 
+        a_{n+2} \overset{(3)}&{=} 4 a_{n+1} - 4 a_n \igual{HI} 
         4 \cdot 2^{n+1}(n+2) - 4 \cdot 2^n(n+1) = 2^2 \cdot 2^{n+1}(n+2) - 2^2 \cdot 2^n(n+1) \\
         a_{n+2} &= 2^{n+2}(2(n+2) - (n+1)) = 2^{n+2}(2n + 4 - n - 1) = 2^{n+2}(n+3) \\
-        a_{n+2} &= 2^{n+2}(n+3) \implies P(n+2):V
+        a_{n+2} &= 2^{n+2}(n+3) \entonces P(n+2):V
     \end{align*}
-    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\forall n \in \mathbb{N}$.
+    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\paratodo n \en \naturales $.
 
     \paragraph{Auxiliar}{
         Escribimos a $a_1 = 4$ como $a_1 = 2 \cdot 2$ para simplificar pasos en la obtención del termino general de 
