--- a/4-guia/ejercicios-4/ej-23-4.tex
+++ b/4-guia/ejercicios-4/ej-23-4.tex
@@ -77,3 +77,7 @@
   %% iconos : \github, \instagram, \tiktok, \linkedin
   \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
 \end{aportes}
+
+\bigskip
+\bigskip
+
