--- a/2-guia/ejercicios-2/ej-19-2.tex
+++ b/2-guia/ejercicios-2/ej-19-2.tex
@@ -1,1 +1,119 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+    \begin{enumerate}[label=\roman*)]
+        \item Sea $(a_n)_{n \in \mathbb{N}}$ la sucesión definida por
+        \begin{align*}
+            a_1 = 1,\ a_2 = 3 \text{ y } a_{n+2} = a_{n+1} + 5a_n \ \ \ (n \in \mathbb{N})
+        \end{align*}
+        Probar que $a_n < 1 + 3^{n-1}$ para todo $n \in \mathbb{N}$.
+
+        \item Sea $(a_n)_{n \in \mathbb{N}}$ la sucesión definida por
+        \begin{align*}
+            a_1 = 1,\ a_2 = \frac{3}{2} \text{ y } a_{n+2} = a_{n+1} + \frac{2n+1}{n+2}a_n \ \ \ (n \in \mathbb{N})
+        \end{align*}
+        Probar que $a_n > n + \displaystyle \frac{1}{3}$ para todo $n \in \mathbb{N}$, $n \geq 4$.
+    \end{enumerate}
+\end{enunciado}
+
+\begin{enumerate}[label=\roman*)]
+    \item Sea $(a_n)_{n \in \mathbb{N}}$ definida por
+    \setcounter{equation}{0}
+    \begin{align}
+        a_1 &= 1 \\
+        a_2 &= 3 \\
+        a_{n+2} &= a_{n+1} + 5a_n,\ \forall n \in \mathbb{N}
+    \end{align}
+    Probemos la desigualdad que nos pide el ejercicio por inducción
+    \begin{align*}
+        P(n): a_n < 1 + 3^{n-1},\ n \in \mathbb{N}   
+    \end{align*}
+    \underline{Caso Base}, $n = 1$ y $n = 2$:
+    \begin{align*}
+        &P(1): a_1 < 1 + 3^{1-1} \overset{(1)}{\implies} P(1): 1 < 2 \implies P(1):V \\
+        &P(2): a_2 < 1 + 3^{2-1} \overset{(2)}{\implies} P(2): 3 < 4 \implies P(2):V
+    \end{align*}
+    \underline{Paso inductivo}. Sea $n \in \mathbb{N}$:
+    \begin{enumerate}
+        \item[HI.] $P(n):V \text{ y } P(n+1):V$, donde $P(n+1): a_{n+1} < 1 + 3^n$
+        \item[TI.] $P(n+2): a_{n+2} < 1 + 3^{n+1}$
+    \end{enumerate}
+        Desarrollemos el lado izquierdo de la desigualdad en la TI
+    \begin{align*}
+        &a_{n+2} \overset{(3)}{=} a_{n+1} + 5a_n \overset{\text{HI}}{<} 1 + 3^n + 5(1 + 3^{n-1}) = 
+        1 + 3^n + 5 + 5 \cdot 3^{n-1} \overset{\text{Aux}}{<} 1 + 3^n + 3^{n-1} + 5 \cdot 3^{n-1} \overset{*}{=} \\
+        &\overset{*}{=} 1 + 3^n + 6 \cdot 3^{n-1} = 1 + 3^n + 2 \cdot 3 \cdot 3^{n-1} 
+        = 1 + 3^n + 2 \cdot 3^n = 1 + 3 \cdot 3^n = 1 + 3^{n+1},\ n \geq 3 \\
+        &\implies a_{n+2} < 1 + 3^{n+1},\ n \geq 3 \implies P(n+2):V,\ n \geq 3
+    \end{align*}
+    Como solo probamos el paso inductivo para $n \geq 3$, deberiamos ver que $P(n)$ y $P(n+1)$ son verdaderas para $n = 3$. O sea, 
+    queremos ver que $P(3)$ y $P(4)$ son verdaderas.
+    \begin{align*}
+        &P(3): a_3 < 1 + 3^{3-1} \overset{(3)}{\implies} P(3): 8 < 9 \implies P(3):V \\
+        &P(4): a_4 < 1 + 3^{4-1} \overset{(3)}{\implies} P(3): 23 < 27 \implies P(4):V
+    \end{align*}
+    Probamos
+    \begin{itemize}
+        \item $P(1):V,\ P(2):V,\ P(3):V,\ P(4):V$
+        \item $P(n):V \land P(n+1):V \implies P(n+2):V, \forall n \geq 3$
+    \end{itemize}
+    Podemos concluir que $P(n):V,$ $\forall n \in \mathbb{N}$.
+    
+    \paragraph{Auxiliar}{Sea $n \in \mathbb{N}$
+        \begin{align*}
+            &5 < 3^{n-1} \iff \log_3(5) < \log_3(3^{n-1}) \iff \log_3(5) < (n-1)\log_3(3) \iff \log_3(5) < n-1 
+            \overset{*}{\iff} \\
+            &\overset{*}{\iff} n > 1 + \log_3(5) \simeq 2.5 \implies 5 < 3^{n-1},\ \forall n \geq 3
+        \end{align*}  
+    }
+
+    \item Sea $(a_n)_{n \in \mathbb{N}}$ definida por
+    \setcounter{equation}{0}
+    \begin{align}
+        a_1 &= 1 \\
+        a_2 &= \frac{3}{2} \\
+        a_{n+2} &= a_{n+1} + \frac{2n+1}{n+2}a_n,\ \forall n \in \mathbb{N}
+    \end{align}
+    Probemos la desigualdad que nos pide el ejercicio por inducción
+    \begin{align*}
+        P(n): a_n > n + \frac{1}{3}, \ n \in \mathbb{N}_{\geq 4}   
+    \end{align*}
+    \underline{Caso Base}, $n = 4$ y $n = 5$:
+    \begin{align*}
+        &P(4): a_4 < 4 + \frac{1}{3} \overset{(3)}{\implies} P(4): \frac{35}{8} < \frac{13}{3} \implies 
+        3 \cdot 35 > 8 \cdot 13 \implies 105 > 104 \implies P(4):V \\
+        &P(5): a_5 < 5 + \frac{1}{3} \overset{(3)}{\implies} P(5): \frac{63}{8} < \frac{16}{3} \implies 
+        3 \cdot 63 > 8 \cdot 16 \implies 189 > 128 \implies P(5):V
+    \end{align*}
+    \underline{Paso inductivo}. Sea $n \in \mathbb{N}_{\geq 4}$:
+    \begin{enumerate}
+        \item[HI.] $P(n):V \text{ y } P(n+1):V$, donde $P(n+1): a_{n+1} > n + 1 + \displaystyle \frac{1}{3}$
+        \item[TI.] $P(n+2): a_{n+2} > n + 2 + \displaystyle \frac{1}{3}$
+    \end{enumerate}
+        Desarrollemos el lado izquierdo de la desigualdad en la TI
+    \begin{align*}
+        &a_{n+2} \overset{(3)}{=} a_{n+1} + \frac{2n+1}{n+2}a_n \overset{\text{HI}}{>} 
+        n + 1 + \frac{1}{3} + \frac{2n+1}{n+2}\left(n + \frac{1}{3}\right)  
+        = n + 1 + \frac{1}{3} + \frac{2n+1}{n+2}\left(n + \frac{1}{3}\right) + 1 - 1 \overset{*}{=} \\
+        &\overset{*}{=} n + 2 + \frac{1}{3} + \frac{2n+1}{n+2}\left(n + \frac{1}{3}\right) - 1
+        \overset{\text{Aux.1}}{\geq} n + 2 + \frac{1}{3} + 1 \cdot \left(n + \frac{1}{3}\right) - 1 
+        = n + 2 + \frac{1}{3} + n + \frac{1}{3} - 1 \overset{**}{=} \\
+        &\overset{**}{=} n + 2 + \frac{1}{3} + n - \frac{2}{3} \overset{\text{Aux.2}}{\geq} n + 2 + \frac{1}{3} \\
+        &\implies a_{n+2} > n + 2 + \frac{1}{3} \implies P(n+2):V
+    \end{align*}
+    Hemos probado el caso base y el paso inductivo. Podemos concluir que $P(n):V,$ $\forall n \in \mathbb{N}_{\geq 4}$.
+    
+    \paragraph{Auxiliar 1}{Sea $n \in \mathbb{N}$
+        \begin{align*}
+            &1 \leq n \iff 1 + 1 \leq n + 1 \iff 2 \leq n + 1 \iff n + 2 \leq n + n + 1 \iff n + 2 \leq 2n + 1 \\
+            &\iff 1 \leq \frac{2n+1}{n+2} 
+        \end{align*}
+    }
+    
+    \paragraph{Auxiliar 2}{Sea $n \in \mathbb{N}$
+        \begin{align*}
+            1 \leq n \iff \frac{1}{3} + \frac{2}{3} \leq n \iff \frac{1}{3} \leq n - \frac{2}{3}
+        \end{align*}
+    }
+    
+\end{enumerate}
+
+
