--- a/3-guia/ejercicios-3/ej-23-3.tex
+++ b/3-guia/ejercicios-3/ej-23-3.tex
@@ -27,7 +27,7 @@ Con la palabra $polinomios$,
 	      Luego inyectando con las repeticiones de la $"o"$: $36 \cdot \frac{8!}{3!} = 241.920 $\\
         Pensando en el complemento:\\
 	      Las posiciones que pueden tomar las $ii$ juntas, se calculan a mano enseguida. Habrían en total \\
-        $\to \underbrace{\frac{10!}{3! \cdot 2!}}_\universo - \underbrace{9 \cdot \frac{8!}{3!}}_{complemento} = 241.920 $
+        $\to \underbrace{\frac{10!}{3! \cdot 2!}}_{\universo} - \underbrace{9 \cdot \frac{8!}{3!}}_{complemento} = 241.920 $
 
 
 	\item
