--- a/2-guia/ejercicios-2/ej-20-2.tex
+++ b/2-guia/ejercicios-2/ej-20-2.tex
@@ -1,1 +1,127 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+    Hallar una fórmula para el término general de las sucesiones definidas recursivamente a continuación
+    y probar su validez.
+    \begin{enumerate}[label=\roman*)]
+        \item $a_1 = \displaystyle \frac{1}{2} \text{ y } a_{n+1} = \frac{1}{2}\left(1 - \sum_{i=1}^{n}a_i\right),\ 
+        \forall n \in \mathbb{N}$
+        \item $a_0 = 5 \text{ y } 
+        a_n = 
+        \begin{cases}
+            2a_{n-1}, &\text{si $n$ es impar} \\
+            \displaystyle \frac{1}{5}a^2_{\frac{n}{2}}, &\text{si $n$ es par}
+        \end{cases}
+        ,\ \forall n \in \mathbb{N}$
+    \end{enumerate}
+\end{enunciado}
+
+\begin{enumerate}[label=\roman*)]
+    \item Sea $(a_n)_{n \in \mathbb{N}_0}$ definida por
+    \setcounter{equation}{0}
+    \begin{align}
+        a_1 &= \frac{1}{2} \\
+        a_{n+1} &= \frac{1}{2}\left(1 - \sum_{i=1}^{n}a_i\right),\ \forall n \in \mathbb{N}
+    \end{align}
+    Veamos si hay algún patrón entre los términos de la sucesión para conjeturar una fórmula de su término 
+    n-ésimo
+    \begin{align}
+        a_2 &= \frac{1}{2}\left(1 - \sum_{i=1}^{1}a_i\right) = \frac{1}{2}\left(1 - \frac{1}{2}\right) = \frac{1}{2}\left(1 - \frac{1}{2}\right) 
+        = \frac{1}{4} = \frac{1}{2^2} \nonumber \\
+        a_3 &= \frac{1}{2}\left(1 - \sum_{i=1}^{2}a_i\right) = \frac{1}{2}\left(1 - \frac{1}{2} - \frac{1}{4}\right) 
+        = \frac{1}{8} = \frac{1}{2^3} \nonumber \\
+        a_4 &= \frac{1}{2}\left(1 - \sum_{i=1}^{3}a_i\right) 
+        = \frac{1}{2}\left(1 - \frac{1}{2} - \frac{1}{4} - \frac{1}{8}\right) 
+        = \frac{1}{16} = \frac{1}{2^4} \nonumber \\
+        &\vdotswithin{=} \nonumber \\
+        a_n &= \frac{1}{2^n}
+    \end{align}
+    Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(3). 
+    Hagamoslo por inducción
+    \begin{align*}
+        P(n): a_n = \frac{1}{2^n}, \ n \in \mathbb{N}   
+    \end{align*}
+    \underline{Caso Base}, $n = 1$:
+	\begin{align*}
+		P(1): a_1 = \frac{1}{2^1} \overset{(1)}{=} \frac{1}{2} \implies P(1):V \\
+	\end{align*}
+	\underline{Paso inductivo}. Sean $n,k \in \mathbb{N}$, donde $1 \leq k \leq n$:
+	\begin{enumerate}
+        \item[HI.] $P(k):V,\ \forall k$
+        \item[TI.] $P(n+1): a_{n+1} = \displaystyle \frac{1}{2^{n+1}}$
+    \end{enumerate}
+ 	Desarrollemos el lado izquierdo de la igualdad en la TI
+    \begin{align*}
+  	    a_{n+1} \overset{(2)}&{=} \frac{1}{2}\left(1 - \sum_{i=1}^{n}a_i\right) \overset{\text{HI}}{=} 
+        \frac{1}{2}\left(1 - \sum_{i=1}^{n}\frac{1}{2^i}\right)  \overset{\text{Aux}}{=}
+        \frac{1}{2}\left(\frac{1}{2^n}\right) = \frac{1}{2^{n+1}} \\
+        a_{n+1} &= \frac{1}{2^{n+1}} \implies P(n+1):V
+    \end{align*}
+    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\forall n \in \mathbb{N}$.
+
+    \paragraph{Auxiliar}{Recordemos la suma geométrica para $q \in \mathbb{R}-\{0,1\}$
+        \begin{align}
+            \sum_{i=0}^{n}q^i = \frac{q^{n+1} - 1}{q-1}
+        \end{align}
+        Calculemos $1 - \sum_{i=1}^{n}1/2^i$
+        \begin{align*}
+            &1 - \sum_{i=1}^{n}\frac{1}{2^i} = 1 - 1 + 1 - \sum_{i=1}^{n}\frac{1}{2^i} 
+            = 1 + 1 - \sum_{i=0}^{n}\frac{1}{2^i}  = 2 - \sum_{i=0}^{n}\frac{1}{2^i}
+            \overset{(1 = 1^i)}{=} 2 - \sum_{i=0}^{n}\frac{1^i}{2^i} \\
+            &= 2 - \sum_{i=0}^{n}\left(\frac{1}{2}\right)^i
+            \overset{(4)}{=} 2 - \left(\frac{\left(\displaystyle\frac{1}{2}\right)^{n+1} - 1}{\displaystyle \frac{1}{2} - 1}\right)
+            = 2 - \left(\frac{\left(\displaystyle\frac{1}{2}\right)^{n+1} - 1}{\displaystyle \frac{-1}{2}}\right) \\
+            &= 2 + \left(\frac{\left(\displaystyle\frac{1}{2}\right)^{n+1} - 1}{\displaystyle \frac{1}{2}}\right)
+            = 2 + 2\left(\frac{\left(\displaystyle\frac{1}{2}\right)^{n+1} - 1}{1}\right)
+            = 2 + 2\left(\frac{1}{2}\right)^{n+1} - 2 \\
+            &= 2\left(\frac{1^{n+1}}{2^{n+1}}\right) = 2 \frac{1}{2^{n+1}} = 2\frac{1}{2^n \cdot 2} = \frac{1}{2^n} \\
+            &\implies 1 - \sum_{i=1}^{n}\frac{1}{2^i} = \frac{1}{2^n}
+        \end{align*}
+    }
+
+    \item Sea $(a_n)_{n \in \mathbb{N}_0}$ definida por
+    \setcounter{equation}{0}
+    \begin{align}
+        a_0 &= 5 \\
+        a_n &= 2a_{n-1},\ \text{si $n$ es impar} \\
+        a_n &= \displaystyle \frac{1}{5}a^2_{\frac{n}{2}},\ \text{si $n$ es par}    
+    \end{align}
+    Veamos si hay algún patrón entre los términos de la sucesión para conjeturar una fórmula de su término 
+    n-ésimo
+    \begin{align}
+        a_1 &= 2 a_0 = 2 \cdot 5 = 10 = 2 \cdot 5 \nonumber \\
+        a_2 &= \frac{1}{5} a_1^2 = \frac{1}{5} \cdot 10^2 = 20 = 2^2 \cdot 5 \nonumber \\
+        a_3 &= 2 a_2 = 2 \cdot 20 = 40 = 2^3 \cdot 5 \nonumber \\
+        a_4 &= \frac{1}{5} a_2^2 = \frac{1}{5} 20^2 = 80 = 2^4 \cdot 5 \nonumber \\
+        &\vdotswithin{=} \nonumber \\
+        a_n &= 2^n \cdot 5
+    \end{align}
+    Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(4). 
+    Hagamoslo por inducción
+    \begin{align*}
+        P(n): a_n = 2^n \cdot 5,\ n \in \mathbb{N}_0   
+    \end{align*}
+    \underline{Caso Base}, $n = 0$:
+	\begin{align*}
+		P(0): a_0 = 2^0 \cdot 5 = 5 \overset{(1)}{=} 5 \implies P(0):V \\
+	\end{align*}
+	\underline{Paso inductivo}. Sean $n,k \in \mathbb{N}_0$, donde $0 \leq k \leq n$:
+	\begin{enumerate}
+        \item[HI.] $P(k):V,\ \forall k$
+        \item[TI.] $P(n+1): a_{n+1} = 2^{n+1} \cdot 5$
+    \end{enumerate}
+    Desarrollemos el lado izquierdo de la igualdad en la TI. Como $a_{n}$ es sucesión partida, analizemos los casos 
+    donde $n$ es par y otro donde es impar. \\
+    Caso $n$ par ($n \text{ par} \implies n+1 \text{ impar}$):
+    \begin{align*}
+  	    a_{n+1} \overset{(2)}&{=} 2 a_{n + 1 -1} = 2 a_n \overset{\text{HI}}{=} 2 \cdot 2^n \cdot 5 = 2^{n+1} \cdot 5 \\
+        a_{n+1} &= 2^{n+1} \cdot 5 \implies P(n+1):V,\ n \text{ par}
+    \end{align*}
+    Caso $n$ impar ($n \text{ impar} \implies n+1 \text{ par}$):
+    \begin{align*}
+        a_{n+1} \overset{(3)}&{=} \frac{1}{5} a_{\frac{n+1}{2}}^2 \overset{\text{HI}}{=} 
+        \frac{1}{5} \cdot (2^{\frac{n+1}{2}}\cdot 5)^2 = \frac{1}{5} \cdot 2^{2\frac{n+1}{2}}\cdot 5^2 
+        =2^{n+1} \cdot 5 \\
+      a_{n+1} &= 2^{n+1} \cdot 5 \implies P(n+1):V,\ n \text{ impar}
+  \end{align*}
+    Por lo tanto, $P(n+1):V$ para cualquier $n$ natural.
+    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\forall n \in \mathbb{N}$.
+\end{enumerate}
