--- a/2-guia/ejercicios-2/ej-17-2.tex
+++ b/2-guia/ejercicios-2/ej-17-2.tex
@@ -2,13 +2,13 @@
     \begin{enumerate}[label=\roman*)]
         \item Sea $(a_n)_{n \en \naturales }$ la sucesión definida por
         \begin{align*}
-            a = 1  \ytext  a_{n+1} = a_n + n \cdot n!,\ \paratodo n \en \naturales 
+            a = 1  \ytext  a_{n+1} = a_n + n \cdot n!,\, \paratodo n \en \naturales 
         \end{align*}
         Probar que $a_n = n!$, y, aplicando el Ej.9i), calcular $\displaystyle \sumatoria{i=1}{n} i \cdot i!$.
         
         \item Sea $(a_n)_{n \en \naturales }$ la sucesión definida por
         \begin{align*}
-            a = 1  \ytext  a_{n+1} = a_n + 3n^2 + 3n + 1,\ \paratodo n \en \naturales 
+            a = 1  \ytext  a_{n+1} = a_n + 3n^2 + 3n + 1,\, \paratodo n \en \naturales 
         \end{align*}
         Probar que $a_n = n^3$, y, aplicando el Ej.9i, calcular de otra forma $\displaystyle \sumatoria{i=1}{n} i^2$ 
         (comparar con Ej.6).
@@ -20,13 +20,13 @@
     \setcounter{equation}{0}
     \begin{align}
         a_1 &= 1 \\
-        a_{n+1} &= a_n + n \cdot n!,\ \paratodo n \en \naturales 
+        a_{n+1} &= a_n + n \cdot n!,\, \paratodo n \en \naturales 
     \end{align} 
     Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión $a_n = n!$ para todo $n \en 
     \naturales $. 
     Hagamoslo por inducción
     \begin{align*}
-        P(n): a_n = n!,\ \paratodo n \en \naturales 
+        P(n): a_n = n!,\, \paratodo n \en \naturales 
     \end{align*}
     \underline{Caso Base}, $n = 1$:
 	    \begin{align*}
@@ -67,13 +67,13 @@
     \setcounter{equation}{0}
     \begin{align}
         a_1 &= 1 \\
-        a_{n+1} &= a_n + 3n^2 + 3n + 1,\ \paratodo n \en \naturales 
+        a_{n+1} &= a_n + 3n^2 + 3n + 1,\, \paratodo n \en \naturales 
     \end{align} 
     Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión $a_n = n^3$ para todo $n \en 
     \naturales $. 
     Hagamoslo por inducción
     \begin{align*}
-        P(n): a_n = n^3,\ \paratodo n \en \naturales 
+        P(n): a_n = n^3,\, \paratodo n \en \naturales 
     \end{align*}
     \underline{Caso Base}, $n = 1$:
 	    \begin{align*}
@@ -114,7 +114,7 @@
     \paragraph{Auxiliar 1}{
         Usemos la Ec.(2)
         \begin{align*}
-            a_{n+1} &= a_n + 3n^2 + 3n + 1 \\ 
+            a_{n+1} &= a_n + 3n^2 + 3n + 1 \\, 
             3n^2 &= a_{n+1} - a_n - 3n - 1 \\
             n^2 &= \frac{a_{n+1} - a_n - 3n - 1}{3}
         \end{align*}
