remaster 14 guia 2 y standarización en formato.

--- a/1-guia/teoria-1/teoria-1.tex
+++ b/1-guia/teoria-1/teoria-1.tex
@@ -281,8 +281,8 @@
 
                   \item \textit{Propiedades destacables de una $f$:}
                         \begin{itemize}[label=\tiny\faIcon{spider}]
-                          \item \textit{inyectiva:} si $\forall x, x' \en A \text{ tales que } f(x) = f(x')$ se tiene que $ x = x'$
-                          \item \textit{sobreyectiva:} si $\forall y \en B, \existe x \en A \text{ tal que } f(x) = y.\: f\text{ es sobreyectiva si } \im(f) = B$
+                          \item \textit{inyectiva:} si $\paratodo x, x' \en A \text{ tales que } f(x) = f(x')$ se tiene que $ x = x'$
+                          \item \textit{sobreyectiva:} si $\paratodo y \en B, \existe x \en A \text{ tal que } f(x) = y.\: f\text{ es sobreyectiva si } \im(f) = B$
                           \item \textit{biyectiva:} Cuando es \textit{inyectiva} y \textit{sobreyectiva}.
                         \end{itemize}
 
