--- a/2-guia/ejercicios-2/ej-22-2.tex
+++ b/2-guia/ejercicios-2/ej-22-2.tex
@@ -3,53 +3,53 @@
 \end{enunciado}
 Probemos que todo número natural $n$ se escribe como suma de distintas potencias de 2 usando inducción
 \begin{align*}
-    P(n): n = \sum_{i=1}^{r} 2^{\alpha_i},\ 0 \leq \alpha_1 < \alpha_2 < \cdots < \alpha_r,\ n \in \mathbb{N}
+    P(n): n = \sumatoria{i=1}{r}  2^{\alpha_i},\, 0 \leq \alpha_1 < \alpha_2 < \cdots < \alpha_r,\, n \en \naturales 
 \end{align*}
 \underline{Caso Base}, $n = 1$:
 \begin{align*}
-    P(1): 1 = 2^0 \overset{\text{Obs}}{\implies} P(1):V
+    P(1): 1 = 2^0 \Entonces{Obs} P(1):V
 \end{align*}
-\underline{Paso inductivo}. Sean $n,k \in \mathbb{N}$, donde $1 \leq k \leq n$:
+\underline{Paso inductivo}. Sean $n,k \en \naturales $, donde $1 \leq k \leq n$:
 \begin{enumerate}
-    \item[HI.] $P(n):V,\ \forall k$
-    \item[TI.] $P(n+1): n + 1 = \displaystyle \sum_{i=1}^{s} 2^{\beta_i},\ 
+    \item[HI.] $P(n):V,\, \paratodo k$
+    \item[TI.] $P(n+1): n + 1 = \displaystyle \sumatoria{i=1}{s}  2^{\beta_i},\, 
     0 \leq \beta_1 < \beta_2 < \cdots < \beta_k$
 \end{enumerate}
 Desarrollemos el lado izquierdo de la igualdad en la TI. Para ello analizemos el caso donde $n$ es par y otro donde es impar.\\
 Caso $n$ impar: \\
-Si $n$ impar esto implica que $n+1$ es par. Podemos escribir a $n+1$ como $n + 1 = 2h,\ h \in \mathbb{N}$
+Si $n$ impar esto implica que $n+1$ es par. Podemos escribir a $n+1$ como $n + 1 = 2h,\, h \en \naturales $
 \begin{align*}
-    h \overset{\text{Aux.1}}{\leq} n \overset{\text{HI}}&{\implies}
-    h = \sum_{i=1}^{r}2^{\alpha_i} \implies 2h = 2 \sum_{i=1}^{r}2^{\alpha_i} 
-    \implies 2h = \sum_{i=1}^{r}2 \cdot 2^{\alpha_i} \implies 2h = \sum_{i=1}^{r}2^{\alpha_i + 1} \\
-    \overset{2h = n+1}&{\implies} n + 1 = \sum_{i=1}^{r}2^{\alpha_i + 1},\ 
+    h \overset{\text{Aux.1}}{\leq} n \overset{\text{HI}}&{\entonces}
+    h = \sumatoria{i=1}{r} 2^{\alpha_i} \entonces 2h = 2 \sumatoria{i=1}{r} 2^{\alpha_i} 
+    \entonces 2h = \sumatoria{i=1}{r} 2 \cdot 2^{\alpha_i} \entonces 2h = \sumatoria{i=1}{r} 2^{\alpha_i + 1} \\
+    \overset{2h = n+1}&{\entonces} n + 1 = \sumatoria{i=1}{r} 2^{\alpha_i + 1},\, 
     1 \leq \alpha_1+1 < \alpha_2+1 < \cdots < \alpha_r+1\\
-    \overset{\text{Obs}}&{\implies} P(n+1):V,\ n \text{ impar}
+    \overset{\text{Obs}}&{\entonces} P(n+1):V,\, n \text{ impar}
 \end{align*}
 Caso $n$ par: \\
-Si $n$ par esto implica que $n+1$ es impar. Podemos escribir a $n+1$ como $n + 1 = 2h + 1,\ h \in \mathbb{N}$
+Si $n$ par esto implica que $n+1$ es impar. Podemos escribir a $n+1$ como $n + 1 = 2h + 1,\, h \en \naturales $
 \begin{align*}
-    h \overset{\text{Aux.2}}{\leq} n \overset{\text{HI}}&{\implies}
-    h = \sum_{i=1}^{r}2^{\alpha_i} \implies 2h = 2 \sum_{i=1}^{r}2^{\alpha_i} 
-    \implies 2h = \sum_{i=1}^{r}2 \cdot 2^{\alpha_i} \implies 2h = \sum_{i=1}^{r}2^{\alpha_i + 1} \\
-    &\implies 1 + 2h = 1 + \sum_{i=1}^{r}2^{\alpha_i + 1}
-    \implies 2h + 1 = 2^0 + \sum_{i=1}^{r}2^{\alpha_i + 1} \\
-    \overset{2h+1 = n+1}&{\implies} n + 1 = 2^0 + \sum_{i=1}^{r}2^{\alpha_i + 1},\ 
+    h \overset{\text{Aux.2}}{\leq} n \overset{\text{HI}}&{\entonces}
+    h = \sumatoria{i=1}{r} 2^{\alpha_i} \entonces 2h = 2 \sumatoria{i=1}{r} 2^{\alpha_i} 
+    \entonces 2h = \sumatoria{i=1}{r} 2 \cdot 2^{\alpha_i} \entonces 2h = \sumatoria{i=1}{r} 2^{\alpha_i + 1} \\
+    &\entonces 1 + 2h = 1 + \sumatoria{i=1}{r} 2^{\alpha_i + 1}
+    \entonces 2h + 1 = 2^0 + \sumatoria{i=1}{r} 2^{\alpha_i + 1} \\
+    \overset{2h+1 = n+1}&{\entonces} n + 1 = 2^0 + \sumatoria{i=1}{r} 2^{\alpha_i + 1},\, 
     1 \leq \alpha_1+1 < \alpha_2+1 < \cdots < \alpha_r+1\\
-    \overset{\text{Obs}}&{\implies} P(n+1):V,\ n \text{ impar}
+    \overset{\text{Obs}}&{\entonces} P(n+1):V,\, n \text{ impar}
 \end{align*}
-Por lo tanto, $P(n+1):V$ para cualquier $n$ natural. Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\forall n \in \mathbb{N}$.
+Por lo tanto, $P(n+1):V$ para cualquier $n$ natural. Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\paratodo n \en \naturales $.
 
 \paragraph{Auxiliar 1}{
     Acotemos $h$
     \begin{align*}
-        2h = n + 1 \implies h = \frac{n+1}{2} \implies h = \frac{n+1}{2} \leq \frac{2n}{2} \implies h \leq n
+        2h = n + 1 \entonces h = \frac{n+1}{2} \entonces h = \frac{n+1}{2} \leq \frac{2n}{2} \entonces h \leq n
     \end{align*}
 }
 \paragraph{Auxiliar 1}{
     Acotemos $h$
     \begin{align*}
-        2h + 1 = n + 1 \implies h = \frac{n}{2} \implies h = \frac{n}{2} \leq n \implies h \leq n
+        2h + 1 = n + 1 \entonces h = \frac{n}{2} \entonces h = \frac{n}{2} \leq n \entonces h \leq n
     \end{align*}
 }
 
@@ -57,7 +57,7 @@ Por lo tanto, $P(n+1):V$ para cualquier $n$ natural. Hemos probado el caso base 
     Aclaraciones sobre el uso de las preposiciones $P(n)$ y $P(n+1)$
     \begin{itemize}
         \item El caso base nos queda verdadero porque encontramos una forma de escribir a 1 como una suma de potencias
-        de 2, en este caso la sumatoria solo posee un termino que es $2^0$. En nuestra proposición $P(n)$ aparecen $r$ 
+        de 2, en este caso la sumatoria solo posee un término que es $2^0$. En nuestra proposición $P(n)$ aparecen $r$ 
         y los $\alpha_i$ (exponentes de 2). Para nuestro caso base, tenemos que $r = 1$ y $\alpha_1 = 0$.
         \item En el paso inductivo, caso $n$ impar, llegamos a escribir $n+1$ como suma de potencias de 2, lo cual
         hace que $P(n+1)$ sea verdadera. Otra forma de verlo, es que encontramos los $\beta_i$ mencionados en la TI. 
