aporte y adapto a formato de apunte

--- a/2-guia/ejercicios-2/ej-20-2.tex
+++ b/2-guia/ejercicios-2/ej-20-2.tex
@@ -127,3 +127,10 @@
         Por lo tanto, $P(n+1):V$ para cualquier $n$ natural.
         Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\paratodo n \en \naturales $.
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/koopardo/}{Marcos Zea \github}
+\end{aportes}
